bdr.BDR.scala.error
Compilation error:
BDR:3: error: not found: value getIndication
while (! finished) {getIndication;
                    ^BDR:4: error: not found: value getIndication
                    if (getIndication() = "R") {right();
                        ^BDR:6: error: not found: value getIndication
                    if (getIndication() = "L") {left();
                        ^BDR:8: error: not found: value getIndication
                    if (getIndication() = "I") {left();
                        ^BDR:11: error: not found: value getIndication
                    if (getIndication() = "A") {forward()}
                        ^BDR:12: error: not found: value getIndication
                    if (getIndication() = "B") {forward();
                        ^BDR:14: error: not found: value getIndication
                    if (getIndication() = "C") {forward();
                        ^BDR:17: error: not found: value getIndication
                    if (getIndication() = "Z") {backward()}
                        ^BDR:18: error: not found: value getIndication
                    if (getIndication() = "Y") {backward();
                        ^BDR:20: error: not found: value getIndication
                    if (getIndication() = "X") {backward();
                        ^